# guess_chan

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.init_chans/Batman/: names.json
.init_chans/Dr. Strange/: names.json
.init_chans/Elon Musk/: names.json
.init_chans/Gagarin/: names.json
.init_chans/Hulk/: names.json
.init_chans/Iron-Man/: names.json
.init_chans/Sample/: names.json
.init_chans/Shadow the Hedgehog/: names.json
.init_chans/Shinji/: names.json
.init_chans/Snoop Dogg/: names.json
.init_chans/Sonic the Hedgehog/: names.json
.init_chans/Spider-Man/: names.json
.init_chans/Venom/: names.json
api/: serializers.py  urls.py  views.py
common/: custom_filters.py  utils.py
game/: admin.py  constants.py  exceptions.py  forms.py  generators.py  models.py  objects.py  processors.py  services.py  urls.py  views.py
game/migrations/: 0001_initial.py  0002_alter_chanimage_chan.py  0002_initial.py  0002_remove_chanimage_name_chanimage_caption.py  0003_alter_chanimage_author_alter_chanimage_caption_and_more.py  0003_chanimage_author_alter_chanimage_image.py  0003_character_characterimage_charactername_and_more.py  0003_remove_chan_name_alter_chan_character_and_more.py  0004_alter_charactername_name_and_more.py  0004_rename_chan_characterimage_character.py  0005_userchanbatch.py  0006_userchanbatch_mode.py  0007_userchanbatch_is_solved.py  (+16 more)
guess_chan/: asgi.py  settings.py  urls.py  wsgi.py
project/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
(+47 files in other folders)
