[tool.poetry]
name = "guess-chan"
version = "0.1.0"
description = ""
authors = ["Ivan Sidorov <iisidorov97@gmail.com>"]
readme = "README.md"
packages = [{include = "guess_chan"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
djangorestframework = "^3.14.0"
docker = "^6.1.3"
environs = "^9.5.0"
django-verify-email = "^2.0.3"
django-crispy-forms = "^2.0"
psycopg2 = "^2.9.6"
django-resized = "^1.0.2"
pillow = "^10.0.0"
imagehash = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
